--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       context: ./
       dockerfile: Dockerfile
     volumes:
-      - /data/springboot-docker-compose-app
+      - /data/awstest-app
     ports:
       - "5000:5000"
